--- a/ExampleApp/src/main/res/layout/activity_main.xml
+++ b/ExampleApp/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,37 +6,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:gravity="center_horizontal">
 
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="100dp"
-            android:layout_below="@+id/textView2"
-            android:layout_centerHorizontal="true"
-            android:background="#aaaaaa">
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FR"
+            android:id="@+id/button"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:padding="20dp"
+            android:onClick="frButtonTouched"/>
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="UILabel example"
-                android:id="@+id/textView"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:textStyle="bold"
-                android:textColor="#ffffff"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PL"
+            android:id="@+id/button"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:padding="20dp"
+            android:onClick="plButtonTouched"/>
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="label text"
-                android:id="@+id/translatedTextView"
-                android:layout_below="@+id/textView"
-                android:layout_alignRight="@+id/textView"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"/>
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
